Ports/jdk/jdk-jdk-18-10/test/langtools/tools/javac/annotations/neg/Cycle1.out
Cycle1.java:13:9: compiler.err.cyclic.annotation.element: cycle1.Foo
1 error
